# birdbox

./: .dockerignore  .gitignore  AGENTS.md  Caddyfile  Cargo.toml  DUAL_NETWORK_SETUP.md  Dockerfile  Dockerfile.caddy  IMPLEMENTATION_SUMMARY.md  PWA_SETUP.md  README.md  docker-compose.yml  env.example
.github/workflows/: docker-publish.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOORBIRD_API.md  LATENCY.md  NETWORKING.md  PWA.md
doorbird/: Cargo.toml
doorbird/src/: lib.rs
src/: audio_fanout.rs  audio_transcode.rs  g711.rs  h264_extractor.rs  main.rs  video_fanout.rs  webrtc.rs
static/: README.md  manifest.json
templates/: base.html  intercom.html
