[package]
name = "birdbox-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws", "http1", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
webrtc = "0.14.0"
audiopus = "0.2"
anyhow = "1"
futures-util = "0.3"
askama = "0.14"
