[package]
name = "doorbird"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
futures-util = "0.3"
bytes = "1"
